# brave-core

./: DEPS  Jenkinsfile  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd
browser/: brave_content_browser_client.cc
browser/brave_shields/: domain_blocking_page_browsertest.cc
browser/ephemeral_storage/: ephemeral_storage_qa_browsertest.cc
browser/extensions/: BUILD.gn
browser/resources/settings/brave_default_extensions_page/: brave_default_extensions_page.html
browser/ui/webui/: brave_webui_source.cc
browser/unstoppable_domains/test/: BUILD.gn
chromium_src/chrome/browser/: about_flags.cc  flag_descriptions.cc  flag_descriptions.h
components/brave_ads/browser/: ads_service.cc  ads_service.h  ads_service_impl.cc  ads_service_impl.h  ads_tab_helper.cc
components/brave_ads/test/: BUILD.gn
components/brave_rewards/browser/: rewards_service.h  rewards_service_impl.cc  rewards_service_impl.h
components/brave_rewards/test/: BUILD.gn
components/brave_shields/browser/: BUILD.gn  ad_block_service.h  domain_blocked_controller_client.cc  domain_blocked_controller_client.h  domain_blocked_navigation_throttle.cc  domain_blocked_navigation_throttle.h  domain_blocked_page.cc  domain_blocked_page.h  domain_blocked_tab_storage.cc  domain_blocked_tab_storage.h
components/brave_shields/resources/: domain_blocked_interstitial.css  domain_blocked_interstitial.html
components/ipfs_ui/components/: app.tsx  uninstalledView.tsx
components/resources/: brave_components_strings.grd  domain_blocked_strings.grdp
components/rpill/common/: rpill.cc  rpill.h
components/services/bat_ads/: bat_ads_impl.cc  bat_ads_impl.h
components/unstoppable_domains/: unstoppable_domains_navigation_throttle.cc
components/unstoppable_domains/test/: BUILD.gn
net/: sources.gni
net/dns/: sources.gni
patches/: chrome-VERSION.patch  chrome-android-java-src-org-chromium-chrome-browser-password_manager-settings-PasswordSettings.java.patch  chrome-browser-search_engines-template_url_service_factory.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-installer-linux-BUILD.gn.patch  third_party-blink-renderer-modules-canvas-canvas2d-base_rendering_context_2d.cc.patch
test/: BUILD.gn
(+12 files in other folders)
